# ridicrypt-gui

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
messages/: bn.json  de.json  en-GB.json  en-US.json  en.json  es-419.json  es-ES.json  es-MX.json  es.json  fr-CA.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  ms.json  pa.json  pt-BR.json  pt-PT.json  pt.json  ru.json  sw.json  th.json  tr.json  vi.json  zh-HK.json  zh-Hans.json  zh-Hant.json  zh-TW.json  zh.json
project.inlang/: project_id  settings.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.sh  icon.icns
src-tauri/src/: bindings.rs  lib.rs  main.rs  runtime.rs  utils.rs
src/lib/: store.ts
src/lib/components/common/: Icon.svelte  LanguageSelector.svelte  Select.svelte  ThemeSelector.svelte  Window.svelte
src/routes/: +layout.svelte  +page.svelte
